--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1860,6 +1860,8 @@ settings.group.delUser.button.title                         = remove this user f
 settings.group.delUser.help                                 = enter the name of the user you wish to remove from the group
 settings.group.delUser.noUser                               = The group currently has no members.
 settings.group.delete                                       = delete group
+settings.group.deleteRequest                                = delete request
+settings.group.deleteRequest.title                          = Deletes the group creation request
 settings.group.deny                                         = deny join request of user {0}
 settings.group.deny.button                                  = deny
 settings.group.denyReason                                   = reason
@@ -1891,9 +1893,10 @@ settings.group.memberList.empty                             = no users in group
 settings.group.memberList.help                              = set the privacy level of your member list
 settings.group.name                                         = group name
 settings.group.noGroups                                     = You aren't a member of any group.
+settings.group.pendingGroupRequests                         = pending requests
 settings.group.pendingInvites                               = group invites
 settings.group.pendingInvites.headline                      = You are invited to join the following groups
-settings.group.pendingRequests                              = pending requests
+settings.group.pendingRequests                              = pending group creation requests
 settings.group.permission.communityPostInspectionPermission = Members of the group can inspect community posts.
 settings.group.permission.fetch                             = fetch permissions
 settings.group.permission.help                              = Click to fetch the selected group's permissions.
@@ -1904,6 +1907,8 @@ settings.group.profileInfo                                  = The information yo
 settings.group.realname                                     = real group name
 settings.group.remInvite.button                             = dismiss
 settings.group.remInvite.button.title                       = dismiss the group invite
+settings.group.removeGroupRequest                           = delete request
+settings.group.removeGroupRequest.title                     = remove your group creation request
 settings.group.removeRequest                                = delete request
 settings.group.removeRequest.title                          = remove your join request
 settings.group.reporting                                    = publication reporting settings
@@ -2130,8 +2135,8 @@ system.about.bs.learnmore                = learn more
 system.about.bs.register                 = register for free
 system.bib3.about                        = We have created a completely new user interface that\u2019s as powerful as it is intuitive to use. The new {0} front-end gives you a better accessibility, usability, and makes the system even more useful for mobile work.
 system.bib3.switch                       = Switch to {0}
-system.bib3.switch.now                   = Switch to {0} now!
 system.bib3.switch.endoflife             = Please note that the old layout you are using will be disabled on July 1st 2015. Your account will then be migrated to the new layout.
+system.bib3.switch.now                   = Switch to {0} now!
 system.contact                           = Contact:
 system.desc                              = The blue social bookmark and publication sharing system.
 system.groups                            = You can <a href="{0}">request a new group</a>.\r\nA group allows you to get an aggregated view of its members' posts as well as to make some of your own posts visible only to members. More information on groups can be found in our blog posts <a href="http://blog.bibsonomy.org/2007/08/feature-of-week-manage-publication.html">Manage the publication lists of your homepage</a> and <a href="http://blog.bibsonomy.org/2007/04/feature-of-week-groups-and-friends.html">Groups and Friends</a>.
