--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1863,6 +1863,8 @@ settings.group.delUser.button.title                         = Diesen Benutzer au
 settings.group.delUser.help                                 = Der Name des Benutzers, der aus der Gruppe ausgeschlossen werden soll
 settings.group.delUser.noUser                               = Die Gruppe hat derzeit noch keine Mitglieder.
 settings.group.delete                                       = Gruppe l\u00F6schen
+settings.group.deleteRequest                                = Anfrage l\u00F6schen
+settings.group.deleteRequest.title                          = L\u00F6scht die Anfrage zur Gruppenerstellung
 settings.group.deny                                         = Mitgliedschaftsantrag des Benutzers {0} ablehnen
 settings.group.deny.button                                  = Antrag ablehnen
 settings.group.deny.button.title                            = Antrag ablehnen
@@ -1894,9 +1896,10 @@ settings.group.memberList.empty                             = keine Benutzer in 
 settings.group.memberList.help                              = Die Sichtbarkeit der Gruppenmitgliederliste einstellen
 settings.group.name                                         = Gruppenname
 settings.group.noGroups                                     = Sie geh\u00F6ren keiner Gruppe an.
+settings.group.pendingGroupRequests                         = Offene Anfragen
 settings.group.pendingInvites                               = Offene Einladungen
 settings.group.pendingInvites.headline                      = Sie wurden in folgende Gruppen eingeladen
-settings.group.pendingRequests                              = Offene Anfragen
+settings.group.pendingRequests                              = Offene Gruppen-Erstellanfragen
 settings.group.permission.communityPostInspectionPermission = Mitglieder der Gruppe k\u00F6nnen Community Eintr\u00E4ge als gesichtet markieren.
 settings.group.permission.fetch                             = Berechtigungen laden
 settings.group.permission.help                              = Klicken Sie hier um die derzeitigen gruppenbasierten Berechtigungen anzuzeigen.
@@ -1907,6 +1910,8 @@ settings.group.profileInfo                                  = Die Informationen,
 settings.group.realname                                     = Name der Gruppe
 settings.group.remInvite.button                             = entfernen
 settings.group.remInvite.button.title                       = Mitgliedschaftsantrag entfernen
+settings.group.removeGroupRequest                           = Anfrage l\u00F6schen
+settings.group.removeGroupRequest.title                     = L\u00F6scht Ihre Gruppen-Erstellanfrage
 settings.group.removeRequest                                = Anfrage l\u00F6schen
 settings.group.removeRequest.title                          = L\u00F6scht Ihre Mitgliedschaftsanfrage
 settings.group.reporting                                    = Publikationsmeldungseinstellungen
@@ -2133,8 +2138,8 @@ system.about.bs.learnmore                = erfahren Sie mehr
 system.about.bs.register                 = kostenlos registrieren
 system.bib3.about                        = Wir haben eine komplett neue Benutzerschnittstelle geschaffen, die genauso m\u00E4chtig wie intuitiv zu bedienen ist. Das neue Frontend macht {0} zug\u00E4nglicher, erh\u00F6ht die Bedienbarkeit und macht es fit f\u00FCr den mobilen Einsatz.
 system.bib3.switch                       = Wechseln Sie zu {0}
+system.bib3.switch.endoflife             = Bitte beachten Sie, dass die alte Benutzerschnittstelle, die Sie derzeit nutzen, am 1. Juli 2015 deaktiviert wird. Ihr Benutzerkonto wird dann automatisch auf die neue Schnittstelle umgestellt.
 system.bib3.switch.now                   = Wechseln Sie jetzt zu {0}!
-system.bib3.switch.endoflife		 = Bitte beachten Sie, dass die alte Benutzerschnittstelle, die Sie derzeit nutzen, am 1. Juli 2015 deaktiviert wird. Ihr Benutzerkonto wird dann automatisch auf die neue Schnittstelle umgestellt.
 system.contact                           = Kontakt:
 system.desc                              = Lesezeichen und Publikationen teilen - in blau!
 system.groups                            = Sie k\u00F6nnen <a href="{0}">neue Gruppen erstellen</a>.\r\nEine Gruppe erm\u00F6glicht eine zusammengefasste Sicht auf die Eintr\u00E4ge aller Gruppenmitglieder sowie die Einschr\u00E4nkung der Sichtbarkeit von Eintr\u00E4gen auf Mitglieder der Gruppe. Mehr Informationen zu Gruppen finden Sie (auf Englisch) in unserem Blog unter <a href="http://blog.bibsonomy.org/2007/08/feature-of-week-manage-publication.html">Manage the publication lists of your homepage</a>  und <a href="http://blog.bibsonomy.org/2007/04/feature-of-week-groups-and-friends.html">Groups and Friends</a>.
