--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -1844,6 +1844,8 @@ settings.group.delUser.button                               = \u0443\u0434\u0430
 settings.group.delUser.button.title                         = \u0443\u0434\u0430\u043B\u0438\u0442\u044C \u044D\u0442\u043E\u0433\u043E \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F \u0438\u0437 \u0433\u0440\u0443\u043F\u043F\u044B
 settings.group.delUser.help                                 = \u0432\u0432\u0435\u0434\u0438\u0442\u0435 \u0438\u043C\u044F \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F, \u043A\u043E\u0442\u043E\u0440\u043E\u0433\u043E \u0412\u044B \u0445\u043E\u0442\u0438\u0442\u0435 \u0443\u0434\u0430\u043B\u0438\u0442\u044C \u0438\u0437 \u0433\u0440\u0443\u043F\u043F\u044B
 settings.group.delUser.noUser                               = \u0423 \u0433\u0440\u0443\u043F\u043F\u044B \u043F\u043E\u043A\u0430 \u043D\u0435\u0442 \u0447\u043B\u0435\u043D\u043E\u0432.
+settings.group.deleteRequest                                = \u0443\u0434\u0430\u043B\u0438\u0442\u044C \u0437\u0430\u043F\u0440\u043E\u0441
+settings.group.deleteRequest.title                          = 
 settings.group.deny                                         = \u043E\u0442\u043A\u0430\u0437\u0430\u0442\u044C \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044E \u0432 \u0434\u043E\u0441\u0442\u0443\u043F\u0435 \u043A \u0433\u0440\u0443\u043F\u043F\u0435 {0}
 settings.group.deny.button                                  = \u043E\u0442\u043A\u0430\u0437\u0430\u0442\u044C
 settings.group.denyReason                                   = \u043F\u0440\u0438\u0447\u0438\u043D\u0430 \u043E\u0442\u043A\u0430\u0437\u0430
@@ -1869,9 +1871,10 @@ settings.group.memberList.empty                             = \u0412 \u0433\u044
 settings.group.memberList.help                              = \u043D\u0430\u0441\u0442\u0440\u043E\u0438\u0442\u044C \u0432\u0438\u0434\u0438\u043C\u043E\u0441\u0442\u044C \u0434\u043B\u044F \u0447\u043B\u0435\u043D\u043E\u0432 \u0441\u0432\u043E\u0435\u0439 \u0433\u0440\u0443\u043F\u043F\u044B
 settings.group.name                                         = \u043D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u0433\u0440\u0443\u043F\u043F\u044B
 settings.group.noGroups                                     = \u0412\u044B \u043D\u0435 \u043F\u0440\u0438\u043D\u0430\u0434\u043B\u0435\u0436\u0438\u0442\u0435 \u043D\u0438 \u043A \u043E\u0434\u043D\u043E\u0439 \u0433\u0440\u0443\u043F\u043F\u0435
+settings.group.pendingGroupRequests                         = \u043E\u0442\u043A\u0440\u044B\u0442\u044B\u0435 \u0437\u0430\u043F\u0440\u043E\u0441\u044B \u043D\u0430 \u0432\u0441\u0442\u0443\u043F\u043B\u0435\u043D\u0438\u0435
 settings.group.pendingInvites                               = \u043F\u0440\u0438\u0433\u043B\u0430\u0448\u0435\u043D\u0438\u044F \u0432 \u0433\u0440\u0443\u043F\u043F\u044B
 settings.group.pendingInvites.headline                      = \u0412\u0430\u0441 \u043F\u0440\u0438\u0433\u043B\u0430\u0441\u0438\u043B\u0438 \u0432 \u0441\u043B\u0435\u0434\u0443\u044E\u0449\u0438\u0435 \u0433\u0440\u0443\u043F\u043F\u044B
-settings.group.pendingRequests                              = \u043E\u0442\u043A\u0440\u044B\u0442\u044B\u0435 \u0437\u0430\u043F\u0440\u043E\u0441\u044B \u043D\u0430 \u0432\u0441\u0442\u0443\u043F\u043B\u0435\u043D\u0438\u0435
+settings.group.pendingRequests                              = 
 settings.group.permission.communityPostInspectionPermission = \u0427\u043B\u0435\u043D\u044B \u0433\u0440\u0443\u043F\u043F\u044B \u043C\u043E\u0433\u0443\u0442 \u043E\u0442\u043C\u0435\u0447\u0430\u0442\u044C \u0437\u0430\u043F\u0438\u0441\u0438 \u0441\u043E\u043E\u0431\u0449\u0435\u0441\u0442\u0432\u0430 \u043A\u0430\u043A \u043F\u0440\u043E\u0432\u0435\u0440\u0435\u043D\u043D\u044B\u0435.
 settings.group.permission.fetch                             = \u0437\u0430\u0433\u0440\u0443\u0437\u0438\u0442\u044C \u043F\u0440\u0430\u0432\u0430
 settings.group.permission.help                              = \u041D\u0430\u0436\u043C\u0438\u0442\u0435 \u0437\u0434\u0435\u0441\u044C, \u0447\u0442\u043E\u0431\u044B \u0437\u0430\u0433\u0440\u0443\u0437\u0438\u0442\u044C (\u043F\u043E\u043A\u0430\u0437\u0430\u0442\u044C) \u043F\u0440\u0430\u0432\u0430 \u0432\u044B\u0431\u0440\u0430\u043D\u043D\u043E\u0439 \u0433\u0440\u0443\u043F\u043F\u044B.
@@ -1881,6 +1884,8 @@ settings.group.profileInfo                                  = \u0418\u043D\u0444
 settings.group.realname                                     = \u043F\u043E\u043B\u043D\u043E\u0435 \u043D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u0433\u0440\u0443\u043F\u043F\u044B
 settings.group.remInvite.button                             = \u0438\u0433\u043D\u043E\u0440\u0438\u0440\u043E\u0432\u0430\u0442\u044C
 settings.group.remInvite.button.title                       = \u0438\u0433\u043D\u043E\u0440\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u043F\u0440\u0438\u0433\u043B\u0430\u0448\u0435\u043D\u0438\u0435 \u0432 \u0433\u0440\u0443\u043F\u043F\u0443
+settings.group.removeGroupRequest                           = \u0443\u0434\u0430\u043B\u0438\u0442\u044C \u0437\u0430\u043F\u0440\u043E\u0441
+settings.group.removeGroupRequest.title                     = 
 settings.group.removeRequest                                = \u0443\u0434\u0430\u043B\u0438\u0442\u044C \u0437\u0430\u043F\u0440\u043E\u0441
 settings.group.removeRequest.title                          = \u0423\u0434\u0430\u043B\u0438\u0442\u044C \u0412\u0430\u0448 \u0437\u0430\u043F\u0440\u043E\u0441 \u043D\u0430 \u043F\u0440\u0438\u0441\u043E\u0435\u0434\u0438\u043D\u0435\u043D\u0438\u0435
 settings.group.reporting                                    = \u043D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u0440\u0435\u043F\u043E\u0440\u0442\u0438\u043D\u0433\u0430 \u043F\u0443\u0431\u043B\u0438\u043A\u0430\u0446\u0438\u0439
