--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1130,10 +1130,10 @@ navi.editTagsAndConcepts         = Tags und Konzepte bearbeiten
 navi.export                      = Export
 navi.federated                   = System\u00FCbergreifende Suche
 navi.federatedAuthor             = System\u00FCbergreifende Suche: Autor
-navi.federatedTag	             = System\u00FCbergreifende Suche: Tag
-navi.federatedUser	             = System\u00FCbergreifende Suche: Benutzer
-navi.federatedGroup	             = System\u00FCbergreifende Suche: Gruppe
 navi.federatedBibtexKey          = System\u00FCbergreifende Suche: BibTeX-Schl\u00FCssel
+navi.federatedGroup              = System\u00FCbergreifende Suche: Gruppe
+navi.federatedTag                = System\u00FCbergreifende Suche: Tag
+navi.federatedUser               = System\u00FCbergreifende Suche: Benutzer
 navi.followees                   = verfolgte Benutzer
 navi.followers                   = Verfolger
 navi.friend                      = Freund
@@ -1292,18 +1292,25 @@ person.new.personPanelHeader                      = \u00DCber diese Person
 person.new.postPanelHeader                        = Ausgew\u00E4hlter Post
 person.new.subHeader                              = f\u00FCr Publikation
 person.show.B1st                                  = Erstgutachter_in
+person.show.B1st.of                               = Erstgutachter_in von
 person.show.B1stTooltip                           = Erste_r Gutachter_in der Dissertation; h\u00E4ufig identisch mit dem Doktorvater / der Doktormutter
 person.show.Bdtv                                  = Doktorvater / Doktormutter
+person.show.Bdtv.of                               = Doktorvater / Doktormutter von
 person.show.BdtvTooltip                           = Person, die gegen\u00FCber der Doktorand_in / dem Doktoranden sowie gegen\u00FCber der Universit\u00E4t f\u00FCr das Promotionsverfahren verantwortlich war
 person.show.Maut                                  = Autor_in
+person.show.Maut.of                               = Autor_in von
 person.show.MautTooltip                           = Person, die die Arbeit geschrieben hat
 person.show.Medt                                  = Herausgeber_in
+person.show.Medt.of                               = Herausgeber_in von
 person.show.MedtTooltip                           = Herausgeber_in
 person.show.Moth                                  = Andere
+person.show.Moth.of                               = beteiligt an
 person.show.MothTooltip                           = Personen, die f\u00FCr das Promotionsverfahren von zentraler Bedeutung waren, aber keine der oben genannten Funktionen hatten (z.B. Mentor_innen)
 person.show.Mrev                                  = Gutachter_in
+person.show.Mrev.of                               = Gutachter_in von
 person.show.MrevTooltip                           = Weitere Gutachter_innen der Dissertation
 person.show.Mths                                  = Betreuer_in
+person.show.Mths.of                               = Betreuer_in von
 person.show.MthsTooltip                           = Person, die den Doktoranden / die Doktorandin haupts\u00E4chlich betreut hat; h\u00E4ufig identisch mit dem Doktorvater / der Doktormutter
 person.show.academicDegree                        = Akademischer Grad
 person.show.addAlternateNameButton                = Alternativen Namen hinzuf\u00FCgen
@@ -2253,8 +2260,8 @@ system.about.bs.learnmore                = erfahren Sie mehr
 system.about.bs.register                 = kostenlos registrieren
 system.bib3.about                        = Wir haben eine komplett neue Benutzerschnittstelle geschaffen, die genauso m\u00E4chtig wie intuitiv zu bedienen ist. Das neue Frontend macht {0} zug\u00E4nglicher, erh\u00F6ht die Bedienbarkeit und macht es fit f\u00FCr den mobilen Einsatz.
 system.bib3.switch                       = Wechseln Sie zu {0}
+system.bib3.switch.endoflife             = Bitte beachten Sie, dass die alte Benutzerschnittstelle, die Sie derzeit nutzen, am 1. Juli 2015 deaktiviert wird. Ihr Benutzerkonto wird dann automatisch auf die neue Schnittstelle umgestellt.
 system.bib3.switch.now                   = Wechseln Sie jetzt zu {0}!
-system.bib3.switch.endoflife		 = Bitte beachten Sie, dass die alte Benutzerschnittstelle, die Sie derzeit nutzen, am 1. Juli 2015 deaktiviert wird. Ihr Benutzerkonto wird dann automatisch auf die neue Schnittstelle umgestellt.
 system.contact                           = Kontakt:
 system.desc                              = Lesezeichen und Publikationen teilen - in blau!
 system.groups                            = Sie k\u00F6nnen <a href="{0}">neue Gruppen erstellen</a>.\r\nEine Gruppe erm\u00F6glicht eine zusammengefasste Sicht auf die Eintr\u00E4ge aller Gruppenmitglieder sowie die Einschr\u00E4nkung der Sichtbarkeit von Eintr\u00E4gen auf Mitglieder der Gruppe. Mehr Informationen zu Gruppen finden Sie (auf Englisch) in unserem Blog unter <a href="http://blog.bibsonomy.org/2007/08/feature-of-week-manage-publication.html">Manage the publication lists of your homepage</a>  und <a href="http://blog.bibsonomy.org/2007/04/feature-of-week-groups-and-friends.html">Groups and Friends</a>.
