+implementation of 'add thesis'

--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1323,6 +1323,7 @@ person.show.close                                 = Abbrechen
 person.show.deleteNameButton                      = Namen entfernen
 person.show.deleteRoleButton                      = Aufheben
 person.show.editRoleButton                        = Rollen \u00E4ndern
+person.show.error.alreadyAssigned                 = "{0}" der Arbeit "{1}" ist bereits der Person "<a href="{2}">{3}</a>" zugeordnet. Bitte \u00FCberpr\u00FCfen Sie die Zuordnung. Gegebenenfalls wird die selbe Person im System mehrfach gef\u00FChrt.
 person.show.firstReviewer                         = Erstgutachter
 person.show.formFirstName                         = Vorname
 person.show.formLastName                          = Nachname
