--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -460,7 +460,6 @@ disambiguation.personsPanelHeader                   = Persons with the name
 disambiguation.pleaseChooseMsg                      = Please choose a person according to this entry with the name "{0}":
 disambiguation.postPanelHeader                      = Related Post
 disambiguation.searchPersonButton                   = Search other name
-person.pub.link										= This publication is linked to its author
 
 discussion.bookmarkReferences = Bookmarks
 discussion.byGroup            = show posts recently discussed by members of {0}
@@ -1134,10 +1133,10 @@ navi.editTagsAndConcepts         = edit your tags and concepts
 navi.export                      = export
 navi.federated                   = federated search
 navi.federatedAuthor             = federated search: author
-navi.federatedTag	             = federated search: tag
-navi.federatedUser	             = federated search: user
-navi.federatedGroup	             = federated search: group
 navi.federatedBibtexKey          = federated search: BibTeX key
+navi.federatedGroup              = federated search: group
+navi.federatedTag                = federated search: tag
+navi.federatedUser               = federated search: user
 navi.followees                   = followed users
 navi.followers                   = followers
 navi.friend                      = friend
@@ -1295,6 +1294,7 @@ person.new.newPersonButton                        = New person
 person.new.personPanelHeader                      = About this person
 person.new.postPanelHeader                        = Selected post
 person.new.subHeader                              = for post
+person.pub.link                                   = This publication is linked to its author
 person.show.B1st                                  = First reviewer
 person.show.B1stTooltip                           = First reviewer
 person.show.Bdtv                                  = Doctor-Vater
@@ -1320,6 +1320,7 @@ person.show.close                                 = Close
 person.show.deleteNameButton                      = Remove name
 person.show.deleteRoleButton                      = Delete role
 person.show.editRoleButton                        = Edit roles
+person.show.error.alreadyAssigned                 = "{0}" of "{1}" has already been associated to the person "<a href="{2}">{3}</a>". Please check the associations. Maybe the same person is accounted several times in the system.
 person.show.firstReviewer                         = First reviewer
 person.show.formFirstName                         = First name
 person.show.formLastName                          = Last name
@@ -2259,8 +2260,8 @@ system.about.bs.learnmore                = learn more
 system.about.bs.register                 = register for free
 system.bib3.about                        = We have created a completely new user interface that\u2019s as powerful as it is intuitive to use. The new {0} front-end gives you a better accessibility, usability, and makes the system even more useful for mobile work.
 system.bib3.switch                       = Switch to {0}
+system.bib3.switch.endoflife             = Please note that the old layout you are using will be disabled on July 1st 2015. Your account will then be migrated to the new layout.
 system.bib3.switch.now                   = Switch to {0} now!
-system.bib3.switch.endoflife		 = Please note that the old layout you are using will be disabled on July 1st 2015. Your account will then be migrated to the new layout.
 system.contact                           = Contact:
 system.desc                              = The blue social bookmark and publication sharing system.
 system.groups                            = You can <a href="{0}">request a new group</a>.\r\nA group allows you to get an aggregated view of its members' posts as well as to make some of your own posts visible only to members. More information on groups can be found in our blog posts <a href="http://blog.bibsonomy.org/2007/08/feature-of-week-manage-publication.html">Manage the publication lists of your homepage</a> and <a href="http://blog.bibsonomy.org/2007/04/feature-of-week-groups-and-friends.html">Groups and Friends</a>.
