+working version of add supervised thesis

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1328,6 +1328,7 @@ person.show.header                                = person entry
 person.show.modal.addRole.placeholder             = authorname or title
 person.show.modal.addSupervisedThesis.header      = add supervised thesis to person
 person.show.modal.addSupervisedThesis.placeholder = authorname or title
+person.show.modal.addSupervisedThesis.role        = Role of {0}
 person.show.modal.addSupervisedThesis.text        = Search Publication
 person.show.modal.addThesis.placeholder           = authorname or title
 person.show.modalAddNameHeader                    = Add alternative name to person
