--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/CellScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/CellScraperUnitURLTest1.bib
@@ -9,6 +9,6 @@ number = {6},
 pages = {987--989},
 publisher = {Elsevier},
 title = {Building Public-Private Research Partnerships in Troubled Times},
-url = {http://www.cell.com/cell/abstract/S0092-8674(09)00271-2},
+url = {http://dx.doi.org/10.1016/j.cell.2009.03.011},
 volume = {136}
 }
