+non-thesis publications shown on person page

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1350,6 +1350,7 @@ person.show.noNamesFound                          = No names found
 person.show.noResourcesFound                      = No resources found
 person.show.orcidId                               = OrcidID
 person.show.other                                 = Other
+person.show.otherPub                              = Other Publications
 person.show.otherReviewer                         = Other reviewer
 person.show.ownPubTab                             = Own Thesis
 person.show.person                                = Person
@@ -1364,7 +1365,7 @@ person.show.supervisor                            = Supervisor
 person.show.thatsMeButton                         = That's me
 person.show.thatsMeLabel                          = User
 person.show.thatsNotMeButton                      = That's not me
-person.show.thesis                                = Thesis
+person.show.thesis                                = Theses
 
 personalize = show personalized posts
 
