--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1352,6 +1352,7 @@ person.show.noNamesFound                          = Keine Namen gefunden
 person.show.noResourcesFound                      = Keine Resourcen gefunden
 person.show.orcidId                               = OrcidID
 person.show.other                                 = Sonstige
+person.show.otherPub                              = Andere Publikationen
 person.show.otherReviewer                         = Andere Gutachter
 person.show.ownPubTab                             = Eigene Abschlussarbeiten
 person.show.person                                = Person
@@ -1365,7 +1366,7 @@ person.show.saveButton                            = Speichern
 person.show.supervisor                            = Doktorvater
 person.show.thatsMeButton                         = Das bin ich
 person.show.thatsMeLabel                          = Benutzer
-person.show.thesis                                = Abschlussarbeit
+person.show.thesis                                = Abschlussarbeiten
 
 personalize = Zeige personalisierte Eintr\u00E4ge 
 
