Added English translations on person-site

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1300,19 +1300,25 @@ person.new.postPanelHeader                        = Selected post
 person.new.subHeader                              = for post
 person.pub.link                                   = This publication is linked to its author
 person.show.B1st                                  = First reviewer
-person.show.B1stTooltip                           = First reviewer
-person.show.Bdtv                                  = Doctor-Vater
-person.show.BdtvTooltip                           = Doctoral advisor
+person.show.B1st.of                               = First reviewer of
+person.show.B1stTooltip                           = First reviewer of the dissertation
+person.show.Bdtv                                  = Doctoral advisor
+person.show.Bdtv.of                               = Doctoral advisor of
+person.show.BdtvTooltip                           = University faculty member whose role was to guide and to chair. 
 person.show.Maut                                  = Author
-person.show.MautTooltip                           = Author
+person.show.Maut.of                               = Author of
+person.show.MautTooltip                           = Author of the dissertation
 person.show.Medt                                  = Editor
+person.show.Medt.of                               = Editor of
 person.show.MedtTooltip                           = Editor
 person.show.Moth                                  = Other
 person.show.MothTooltip                           = Other
 person.show.Mrev                                  = Reviewer
-person.show.MrevTooltip                           = Reviewer
+person.show.Mrev.of                               = Reviewer of
+person.show.MrevTooltip                           = Further reviewer
 person.show.Mths                                  = Advisor
-person.show.MthsTooltip                           = Advisor
+person.show.Mths.of                               = Advisor of
+person.show.MthsTooltip                           = Person that mainly guided the doctoral candidate
 person.show.academicDegree                        = Academic degree
 person.show.addAlternateNameButton                = Add alternative name
 person.show.addNameButton                         = Add name
@@ -1362,7 +1368,7 @@ person.show.personAlternateNamesSelect            = (Select main name)
 person.show.personPanelHeader                     = About
 person.show.resourcesPanelHeader                  = Resources
 person.show.role                                  = Role
-person.show.rolePubTab                            = Advision / Revision
+person.show.rolePubTab                            = related theses
 person.show.saveButton                            = Save
 person.show.supervisor                            = Supervisor
 person.show.thatsMeButton                         = That's me
