--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1368,7 +1368,7 @@ person.show.personAlternateNamesSelect            = (Select main name)
 person.show.personPanelHeader                     = About
 person.show.resourcesPanelHeader                  = Resources
 person.show.role                                  = Role
-person.show.rolePubTab                            = related theses
+person.show.rolePubTab                            = Related Theses
 person.show.saveButton                            = Save
 person.show.supervisor                            = Supervisor
 person.show.thatsMeButton                         = That's me
