+feedback alert messages on person page

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1318,6 +1318,8 @@ person.show.addThesisButton                       = Add thesis
 person.show.advisor                               = Advisor
 person.show.authorOf                              = Author of
 person.show.close                                 = Close
+person.show.created.createAndLinkPerson           = A new person has been created and assigned to the publication you have selected. Here, you can view or edit this person's details.  
+person.show.created.linkPerson                    = The publication has been associated to the person you have selected.
 person.show.deleteNameButton                      = Remove name
 person.show.deleteRoleButton                      = Delete role
 person.show.editRoleButton                        = Edit roles
