->missing text changes

--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -102,7 +102,7 @@ batchedit.eachTagOk                = Tag(s) bearbeiten
 batchedit.editHint                 = Bitte w\u00E4hlen Sie mindestens einen Eintrag aus, bevor Sie eine Option zur Bearbeitung angeben.
 batchedit.hint                     = 
 batchedit.hint.notSavedEdit        = Die folgenden (fehlerfreien) Eintr\u00E4ge werden erst gespeichert, wenn Sie die Bearbeitung abgeschlossen haben.
-batchedit.hint.savedEdit           = Die folgenden (fehlerfreien) Eintr\u00E4ge sind gespeichert und k\u00F6nnen nun bearbeitet werden. 
+batchedit.hint.savedEdit           = Die folgenden (fehlerfreien) Eintr\u00E4ge sind gespeichert und k\u00F6nnen nun bearbeitet werden.
 batchedit.info1                    = Bearbeiten Sie Ihre Eintr\u00E4ge. Sie k\u00F6nnen:
 batchedit.info2                    = Um Eintr\u00E4ge zu bearbeiten, w\u00E4hlen Sie diese zun\u00E4chst aus und geben dann die gew\u00FCnschte Aktion an.
 batchedit.noPost.message           = Es gibt keine Eintr\u00E4ge die bearbeitet werden k\u00F6nnten.
@@ -1367,7 +1367,7 @@ person.show.personPanelHeader                     = Infos
 person.show.resourcesPanelHeader                  = Resourcen
 person.show.role                                  = Rolle
 person.show.rolePubTab                            = Betreuung / Begutachtung
-person.show.saveButton                            = Speichern
+person.show.saveButton                            = Aktualisieren
 person.show.supervisor                            = Doktorvater
 person.show.thatsMeButton                         = Das bin ich
 person.show.thatsMeLabel                          = Benutzer
