->unified rendering of disambiguated person names

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1300,24 +1300,24 @@ person.new.postPanelHeader                        = Selected post
 person.new.subHeader                              = for post
 person.pub.link                                   = This publication is linked to its author
 person.show.B1st                                  = First reviewer
-person.show.B1st.of                               = First reviewer of
+person.show.B1st.of                               = first reviewer of
 person.show.B1stTooltip                           = First reviewer of the dissertation
 person.show.Bdtv                                  = Doctoral advisor
-person.show.Bdtv.of                               = Doctoral advisor of
+person.show.Bdtv.of                               = doctoral advisor of
 person.show.BdtvTooltip                           = University faculty member whose role was to guide and to chair. 
 person.show.Maut                                  = Author
-person.show.Maut.of                               = Author of
+person.show.Maut.of                               = author of
 person.show.MautTooltip                           = Author of the dissertation
 person.show.Medt                                  = Editor
-person.show.Medt.of                               = Editor of
+person.show.Medt.of                               = editor of
 person.show.MedtTooltip                           = Editor
 person.show.Moth                                  = Other
 person.show.MothTooltip                           = Other
 person.show.Mrev                                  = Reviewer
-person.show.Mrev.of                               = Reviewer of
+person.show.Mrev.of                               = reviewer of
 person.show.MrevTooltip                           = Further reviewer
 person.show.Mths                                  = Advisor
-person.show.Mths.of                               = Advisor of
+person.show.Mths.of                               = advisor of
 person.show.MthsTooltip                           = Person that mainly guided the doctoral candidate
 person.show.academicDegree                        = Academic degree
 person.show.addAlternateNameButton                = Add alternative name
