Added WISKIDZ prromo pictures.

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1388,8 +1388,10 @@ personalized.tag.info = The following tags of {0} might be interesting for you:
 persons.intro.addperson.button = Add
 persons.intro.addperson.text   = Person not found?
 persons.intro.dataset.desc     = &nbsp;
+persons.intro.dataset.img      = /resources/image/logo_person_dataset.svg
 persons.intro.dataset.text     = Researchers of all fields and disciplines. Dissertation authors can link their work to their advisor (their \u201CDoktorvater\u201D) and search for their roots in academia. Advisors can document the dissertations of their former students. All users contribute to the\u0009reconstruction of an interdisciplinary genealogy of research in Germany.
 persons.intro.genealogy.desc   = &nbsp;
+persons.intro.genealogy.img    = /resources/image/logo_person_genealogy_english.svg
 persons.intro.genealogy.text   = Bibsonomy Genealogy creates a genealogy of research at German universities based on user inputs. It is based on the dissertation catalog of the Deutsche Nationalbibliothek (DNB).Users enter linkages \u0009between existing dissertations (advisor information etc.) and provide information about missing dissertations. 
 persons.intro.head.desc        = A Dissertation-based Genealogy of Research at German Universities
 persons.intro.head.title       = {0} Genealogy
@@ -1399,9 +1401,11 @@ persons.intro.navi.reg         = How Does Bibsonomy Genealogy Work?
 persons.intro.navi.search      = Search Dissertation Authors
 persons.intro.navi.wiskidz     = Who is behind Bibsonomy Genealogy?
 persons.intro.reg.desc         = &nbsp;
+persons.intro.reg.img          = /resources/image/logo_person_reg.svg
 persons.intro.reg.text         = BibSonomy Genealogy builds on the competence and experience of Bibsonomy, the non-commercial \u0009platform for sharing publications and bookmarks. User registration and secure data management are \u0009implemented via the Bibsonomy platform. Data are exclusively used for non-commercial science and higher education research.
 persons.intro.search.desc      = Enter Person Name (Author, Advisor etc.) or Title 
 persons.intro.wiskidz.desc     = &nbsp;
+persons.intro.wiskidz.img      = /resources/image/logo_person_wiskidz.svg
 persons.intro.wiskidz.text     = BibSonomy Genealogy is a joint project of the \u0009International Centre for Higher Education Research \u0009(INCHER-Kassel) and the Interdisciplinary Research Center for Information System Design (ITeG) at the University of Kassel. It is supported by the German \u0009Federal Ministry of Education and Research (BMBF). 
 
 plain = plain
