Messages and cosmetics: - adapted name-policy for 'geanealogie' as requested - cosmetics in genealogie-page

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1196,7 +1196,7 @@ navi.passReminder.button         = send
 navi.password                    = password
 navi.password.ldap               = pin code
 navi.pdfs                        = documents
-navi.persons                     = genealogy
+navi.persons                     = genealogie
 navi.popular                     = popular
 navi.postBookmark                = post bookmark
 navi.postBookmarkPopup           = post bookmark (popup)
@@ -1392,21 +1392,21 @@ persons.intro.dataset.img      = /resources/image/logo_person_dataset.svg
 persons.intro.dataset.text     = Researchers of all fields and disciplines. Dissertation authors can link their work to their advisor (their \u201CDoktorvater\u201D) and search for their roots in academia. Advisors can document the dissertations of their former students. All users contribute to the\u0009reconstruction of an interdisciplinary genealogy of research in Germany.
 persons.intro.genealogy.desc   = &nbsp;
 persons.intro.genealogy.img    = /resources/image/logo_person_genealogy_english.svg
-persons.intro.genealogy.text   = Bibsonomy Genealogy creates a genealogy of research at German universities based on user inputs. It is based on the dissertation catalog of the Deutsche Nationalbibliothek (DNB).Users enter linkages \u0009between existing dissertations (advisor information etc.) and provide information about missing dissertations. 
+persons.intro.genealogy.text   = {0} Genealogy creates a genealogy of research at German universities based on user inputs. It is based on the dissertation catalog of the Deutsche Nationalbibliothek (DNB). Users enter linkages between existing dissertations (advisor information etc.) and provide information about missing dissertations.
 persons.intro.head.desc        = A Dissertation-based Genealogy of Research at German Universities
-persons.intro.head.title       = {0} Genealogy
+persons.intro.head.title       = {0} Genealogie
 persons.intro.navi.dataset     = Who Can Participate?
-persons.intro.navi.genealogy   = What Is Bibsonomy Genealogy?
-persons.intro.navi.reg         = How Does Bibsonomy Genealogy Work?
+persons.intro.navi.genealogy   = What Is {0} Genealogie?
+persons.intro.navi.reg         = How Does {0} Genealogie Work?
 persons.intro.navi.search      = Search Dissertation Authors
-persons.intro.navi.wiskidz     = Who is behind Bibsonomy Genealogy?
+persons.intro.navi.wiskidz     = Who is behind {0} Genealogie?
 persons.intro.reg.desc         = &nbsp;
 persons.intro.reg.img          = /resources/image/logo_person_reg.svg
-persons.intro.reg.text         = BibSonomy Genealogy builds on the competence and experience of Bibsonomy, the non-commercial \u0009platform for sharing publications and bookmarks. User registration and secure data management are \u0009implemented via the Bibsonomy platform. Data are exclusively used for non-commercial science and higher education research.
+persons.intro.reg.text         = {0} Genealogy builds on the competence and experience of {0}, the non-commercial \u0009platform for sharing publications and bookmarks. User registration and secure data management are \u0009implemented via the {0} platform. Data are exclusively used for non-commercial science and higher education research.
 persons.intro.search.desc      = Enter Person Name (Author, Advisor etc.) or Title 
 persons.intro.wiskidz.desc     = &nbsp;
 persons.intro.wiskidz.img      = /resources/image/logo_person_wiskidz.svg
-persons.intro.wiskidz.text     = BibSonomy Genealogy is a joint project of the \u0009International Centre for Higher Education Research \u0009(INCHER-Kassel) and the Interdisciplinary Research Center for Information System Design (ITeG) at the University of Kassel. It is supported by the German \u0009Federal Ministry of Education and Research (BMBF). 
+persons.intro.wiskidz.text     = {0} Genealogie is a joint project of the \u0009International Centre for Higher Education Research \u0009(INCHER-Kassel) and the Interdisciplinary Research Center for Information System Design (ITeG) at the University of Kassel. It is supported by the German Federal Ministry of Education and Research (BMBF). 
 
 plain = plain
 
