--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1388,21 +1388,21 @@ persons.intro.dataset.img      = /resources/image/logo_person_dataset.svg
 persons.intro.dataset.text     = Forscherinnen und Forscher aller F\u00E4cher und Disziplinen. Promovierte k\u00F6nnen ihre Dissertation mit ihrem Doktorvater bzw. ihrer Doktormutter verkn\u00FCpfen und nach ihren Wurzeln in der Wissenschaft suchen. Betreuerinnen und Betreuer \u0009k\u00F6nnen die von ihnen betreuten Arbeiten dokumentieren. Und alle zusammen tragen dazu bei, einen f\u00E4cher\u00FCbergreifenden Stammbaum der \u0009Forschung in Deutschland zu erstellen.
 persons.intro.genealogy.desc   = &nbsp;
 persons.intro.genealogy.img    = /resources/image/logo_person_genealogy.svg
-persons.intro.genealogy.text   = Die Bibsonomy Genaologie erstellt nutzerbasiert einen Stammbaum der Forschung an deutschen Universit\u00E4ten. Ausgangspunkt ist der Dissertationskatalog der Deutschen  Nationalbibliothek. Nutzerbasiert werden Beziehungen zwischen den an der Dissertation beteiligten Personen (Autor_in, Betreuer_in etc.) erg\u00E4nzt.
+persons.intro.genealogy.text   = Die {0} Genaologie  erstellt nutzerbasiert einen Stammbaum der Forschung an deutschen Universit\u00E4ten. Ausgangspunkt ist der Dissertationskatalog der Deutschen Nationalbibliothek. Nutzerbasiert werden Beziehungen zwischen den an der Dissertation beteiligten Personen (Autor_in, Betreuer_in etc.) erg\u00E4nzt.
 persons.intro.head.desc        = Dissertationsbasierter Stammbaum der Forschung an deutschen Universit\u00E4ten
 persons.intro.head.title       = {0} Genealogie
 persons.intro.navi.dataset     = Wer kann mitmachen?
 persons.intro.navi.genealogy   = Was ist die {0} Genealogie?
-persons.intro.navi.reg         = Wie funktioniert die Bibsonomy Genealogie?
+persons.intro.navi.reg         = Wie funktioniert die {0} Genealogie?
 persons.intro.navi.search      = Personensuche zu Dissertationen
-persons.intro.navi.wiskidz     = Das Projekt
+persons.intro.navi.wiskidz     = Wer steckt hinter dem Projekt?
 persons.intro.reg.desc         = &nbsp;
 persons.intro.reg.img          = /resources/image/logo_person_reg.svg
-persons.intro.reg.text         = Die Genealogie nutzt die Kompetenz und Erfahrung des nicht-kommerziellen Social Bookmarking-Programms Bibsonomy, der Plattform zum einfachen Teilen von Publikationen und Bookmarks. Die Nutzerregistrierung und gesicherte Datenverwaltung \u0009erfolgt \u00FCber die Bibsonomy-Plattform. Die Daten \u0009werden nur zu Forschungszwecken im Bereich der Hochschul- und Wissenschaftsforschung verwendet.
+persons.intro.reg.text         = Die Genealogie nutzt die Kompetenz und Erfahrung des nicht-kommerziellen Social Bookmarking-Programms {0}, der Plattform zum einfachen Teilen von Publikationen und Bookmarks. Die Nutzerregistrierung und gesicherte Datenverwaltung \u0009erfolgt \u00FCber die Bibsonomy-Plattform. Die Daten \u0009werden nur zu Forschungszwecken im Bereich der Hochschul- und Wissenschaftsforschung verwendet.
 persons.intro.search.desc      = Hier Personennamen (Doktorrand_in, Betreuer_in, etc.) oder Titelstichwort eingeben
 persons.intro.wiskidz.desc     = &nbsp;
 persons.intro.wiskidz.img      = /resources/image/logo_person_wiskidz.svg
-persons.intro.wiskidz.text     = Die Bibsonomy Genealogie ist ein vom Bundesministerium f\u00FCr Bildung und Forschung gef\u00F6rdertes Projekt des International Centre for Higher Education Research (INCHER-Kassel) und des Forschungszentrums f\u00FCr Informationstechnik-Gestaltung (ITeG) der Universit\u00E4t Kassel. Verantwortlicher Ansprechpartner ist Prof. Dr. Guido B\u00FCnstorf (buenstorf&lt;at&gt;uni-kassel.de). 
+persons.intro.wiskidz.text     = Die {0} Genealogie ist ein vom Bundesministerium f\u00FCr Bildung und Forschung gef\u00F6rdertes Projekt des International Centre for Higher Education Research (INCHER-Kassel) und des Forschungszentrums f\u00FCr Informationstechnik-Gestaltung (ITeG) der Universit\u00E4t Kassel. Verantwortlicher Ansprechpartner ist Prof. Dr. Guido B\u00FCnstorf (buenstorf&lt;at&gt;uni-kassel.de). Detaillierte Information zum Forschungsprojekt gibt es unter: <a href="http://www.uni-kassel.de/go/wiskidz">www.uni-kassel.de/go/wiskidz</a>
 
 plain = einfach
 
