fix #2523 style OAuth auth-page

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1199,11 +1199,12 @@ no = no
 
 note = note
 
+oauth.authorization.app              = Allow {0} access?
 oauth.authorization.button.authorize = Authorize
 oauth.authorization.button.deny      = Deny
 oauth.authorization.callback.token   = Please enter code <b>{0}</b> when requested.
-oauth.authorization.explanation      = If you authorize this request, the application gains full access to your identity and resources. Please note that communication is secured via <a href="http://oauth.net">OAuth</a>, the open standard for authorization. This allows you to share your private resources stored on {0} with this application without having to hand out your username and password.
-oauth.authorization.intro            = The following application wants to access your account information:
+oauth.authorization.explanation      = If you authorize this request, the application gains full access to your identity and resources. Please note that communication is secured via <a href="http://oauth.net">OAuth</a>, the open standard for authorization. This allows you to share your private resources stored on {0} with this application without having to hand out your username and password.<br>
+oauth.authorization.intro            = An Application would like to connect to your account!<br>\r\nThe application <b> {0} </b> by <b> {1} </b> would like to have the ability to <b>access and update</b> your data on {2}
 oauth.authorization.success          = You successfully authorized the application "{0}" to access your data in {1}.
 oauth.button.delete                  = Delete
 oauth.denial.info                    = {0} can not access your {1} account.
@@ -2114,8 +2115,8 @@ system.about.bs.learnmore                = learn more
 system.about.bs.register                 = register for free
 system.bib3.about                        = We have created a completely new user interface that\u2019s as powerful as it is intuitive to use. The new {0} front-end gives you a better accessibility, usability, and makes the system even more useful for mobile work.
 system.bib3.switch                       = Switch to {0}
+system.bib3.switch.endoflife             = Please note that the old layout you are using will be disabled on July 1st 2015. Your account will then be migrated to the new layout.
 system.bib3.switch.now                   = Switch to {0} now!
-system.bib3.switch.endoflife		 = Please note that the old layout you are using will be disabled on July 1st 2015. Your account will then be migrated to the new layout.
 system.contact                           = Contact:
 system.desc                              = The blue social bookmark and publication sharing system.
 system.groups                            = You can <a href="{0}">request a new group</a>.\r\nA group allows you to get an aggregated view of its members' posts as well as to make some of your own posts visible only to members. More information on groups can be found in our blog posts <a href="http://blog.bibsonomy.org/2007/08/feature-of-week-manage-publication.html">Manage the publication lists of your homepage</a> and <a href="http://blog.bibsonomy.org/2007/04/feature-of-week-groups-and-friends.html">Groups and Friends</a>.
