--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1197,11 +1197,12 @@ no = nein
 
 note = Hinweis
 
+oauth.authorization.app              = Den Zugriff f\u00FCr {0} erlauben?
 oauth.authorization.button.authorize = Erlauben
 oauth.authorization.button.deny      = Ablehnen
 oauth.authorization.callback.token   = Bitte geben Sie gegebenenfalls den Schl\u00FCssel <b>{0}</b> zur Best\u00E4tigung der Autorisierung ein.
-oauth.authorization.explanation      = Diese Anwendung verlangt vollen Zugriff auf Ihre Identit\u00E4t und Ressourcen in {0}. Alle Zugriffe auf Ihre Resourcen in {0} sind mittels <a href="http://oauth.net">OAuth</a> abgesichert - dem offenen Standard f\u00FCr Autorisierung. Auf diese Weise k\u00F6nnen Sie ihre Ressourcen aus {0} in der Anwendung nutzen ohne in dieser Ihr Passwort zu hinterlegen. 
-oauth.authorization.intro            = Folgende Applikation m\u00F6chte auf Ihre pers\u00F6nlichen Daten zugreifen:
+oauth.authorization.explanation      = Diese Anwendung verlangt vollen Zugriff auf Ihre Identit\u00E4t und Ressourcen in {0}. Alle Zugriffe auf Ihre Resourcen in {0} sind mittels <a href="http://oauth.net">OAuth</a> abgesichert - dem offenen Standard f\u00FCr Autorisierung. Auf diese Weise k\u00F6nnen Sie ihre Ressourcen aus {0} in der Anwendung nutzen ohne in dieser Ihr Passwort zu hinterlegen.<br>
+oauth.authorization.intro            = Eine Anwendung m\u00F6chte sich mit Ihrem Konto verbinden!<br>\r\nDie Anwendung <b> {0} </b> von <b> {1} </b> w\u00FCrde gerne die M\u00F6glichkeit haben, <b>Zugriff- und Update Funktionen</b> auf Ihre Daten bei {2} durchf\u00FChren zu k\u00F6nnen.
 oauth.authorization.success          = "{0}" darf nun auf Ihre Daten in {1} zugreifen.
 oauth.button.delete                  = L\u00F6schen
 oauth.denial.info                    = {0} darf nicht auf Ihren {1}-Account zugreifen.
@@ -2111,8 +2112,8 @@ system.about.bs.learnmore                = erfahren Sie mehr
 system.about.bs.register                 = kostenlos registrieren
 system.bib3.about                        = Wir haben eine komplett neue Benutzerschnittstelle geschaffen, die genauso m\u00E4chtig wie intuitiv zu bedienen ist. Das neue Frontend macht {0} zug\u00E4nglicher, erh\u00F6ht die Bedienbarkeit und macht es fit f\u00FCr den mobilen Einsatz.
 system.bib3.switch                       = Wechseln Sie zu {0}
+system.bib3.switch.endoflife             = Bitte beachten Sie, dass die alte Benutzerschnittstelle, die Sie derzeit nutzen, am 1. Juli 2015 deaktiviert wird. Ihr Benutzerkonto wird dann automatisch auf die neue Schnittstelle umgestellt.
 system.bib3.switch.now                   = Wechseln Sie jetzt zu {0}!
-system.bib3.switch.endoflife		 = Bitte beachten Sie, dass die alte Benutzerschnittstelle, die Sie derzeit nutzen, am 1. Juli 2015 deaktiviert wird. Ihr Benutzerkonto wird dann automatisch auf die neue Schnittstelle umgestellt.
 system.contact                           = Kontakt:
 system.desc                              = Lesezeichen und Publikationen teilen - in blau!
 system.groups                            = Sie k\u00F6nnen <a href="{0}">neue Gruppen erstellen</a>.\r\nEine Gruppe erm\u00F6glicht eine zusammengefasste Sicht auf die Eintr\u00E4ge aller Gruppenmitglieder sowie die Einschr\u00E4nkung der Sichtbarkeit von Eintr\u00E4gen auf Mitglieder der Gruppe. Mehr Informationen zu Gruppen finden Sie (auf Englisch) in unserem Blog unter <a href="http://blog.bibsonomy.org/2007/08/feature-of-week-manage-publication.html">Manage the publication lists of your homepage</a>  und <a href="http://blog.bibsonomy.org/2007/04/feature-of-week-groups-and-friends.html">Groups and Friends</a>.
