Fixed missing and inaccurate message keys.

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1296,24 +1296,25 @@ person.new.personPanelHeader                      = About this person
 person.new.postPanelHeader                        = Selected post
 person.new.subHeader                              = for post
 person.show.B1st                                  = First reviewer
-person.show.B1st.of                               = first reviewer of
+person.show.B1st.of                               = , first reviewer of
 person.show.B1stTooltip                           = First reviewer of the dissertation
 person.show.Bdtv                                  = Doctoral advisor
-person.show.Bdtv.of                               = doctoral advisor of
+person.show.Bdtv.of                               = , doctoral advisor of
 person.show.BdtvTooltip                           = University faculty member whose role was to guide and to chair. 
 person.show.Maut                                  = Author
-person.show.Maut.of                               = author of
+person.show.Maut.of                               = , author of
 person.show.MautTooltip                           = Author of the dissertation
 person.show.Medt                                  = Editor
-person.show.Medt.of                               = editor of
+person.show.Medt.of                               = , editor of
 person.show.MedtTooltip                           = Editor
 person.show.Moth                                  = Other
+person.show.Moth.of                               = , involved in
 person.show.MothTooltip                           = Other
 person.show.Mrev                                  = Reviewer
-person.show.Mrev.of                               = reviewer of
+person.show.Mrev.of                               = , reviewer of
 person.show.MrevTooltip                           = Further reviewer
 person.show.Mths                                  = Advisor
-person.show.Mths.of                               = advisor of
+person.show.Mths.of                               = , advisor of
 person.show.MthsTooltip                           = Person that mainly guided the doctoral candidate
 person.show.academicDegree                        = Academic degree
 person.show.addAlternateNameButton                = Add alternative name
@@ -1361,7 +1362,7 @@ person.show.otherPub                              = Other Publications
 person.show.otherReviewer                         = Other reviewer
 person.show.ownPubTab                             = Own Thesis
 person.show.person                                = Person
-person.show.personAlternateNames                  = Alternative Namen
+person.show.personAlternateNames                  = Alternative Names
 person.show.personAlternateNamesSelect            = (Select main name)
 person.show.personPanelHeader                     = About
 person.show.resourcesPanelHeader                  = Resources
