--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1297,25 +1297,25 @@ person.new.personPanelHeader                      = \u00DCber diese Person
 person.new.postPanelHeader                        = Ausgew\u00E4hlter Post
 person.new.subHeader                              = f\u00FCr Publikation
 person.show.B1st                                  = Erstgutachter_in
-person.show.B1st.of                               = Erstgutachter_in von
+person.show.B1st.of                               = , Erstgutachter_in von
 person.show.B1stTooltip                           = Erste_r Gutachter_in der Dissertation; h\u00E4ufig identisch mit dem Doktorvater / der Doktormutter
 person.show.Bdtv                                  = Doktorvater / Doktormutter
-person.show.Bdtv.of                               = Doktorvater / Doktormutter von
+person.show.Bdtv.of                               = , Doktorvater / Doktormutter von
 person.show.BdtvTooltip                           = Person, die gegen\u00FCber der Doktorand_in / dem Doktoranden sowie gegen\u00FCber der Universit\u00E4t f\u00FCr das Promotionsverfahren verantwortlich war
 person.show.Maut                                  = Autor_in
-person.show.Maut.of                               = Autor_in von
+person.show.Maut.of                               = , Autor_in von
 person.show.MautTooltip                           = Person, die die Arbeit geschrieben hat
 person.show.Medt                                  = Herausgeber_in
-person.show.Medt.of                               = Herausgeber_in von
+person.show.Medt.of                               = , Herausgeber_in von
 person.show.MedtTooltip                           = Herausgeber_in
 person.show.Moth                                  = Andere
-person.show.Moth.of                               = beteiligt an
+person.show.Moth.of                               = , beteiligt an
 person.show.MothTooltip                           = Personen, die f\u00FCr das Promotionsverfahren von zentraler Bedeutung waren, aber keine der oben genannten Funktionen hatten (z.B. Mentor_innen)
 person.show.Mrev                                  = Gutachter_in
-person.show.Mrev.of                               = Gutachter_in von
+person.show.Mrev.of                               = , Gutachter_in von
 person.show.MrevTooltip                           = Weitere Gutachter_innen der Dissertation
 person.show.Mths                                  = Betreuer_in
-person.show.Mths.of                               = Betreuer_in von
+person.show.Mths.of                               = , Betreuer_in von
 person.show.MthsTooltip                           = Person, die den Doktoranden / die Doktorandin haupts\u00E4chlich betreut hat; h\u00E4ufig identisch mit dem Doktorvater / der Doktormutter
 person.show.academicDegree                        = Akademischer Grad
 person.show.addAlternateNameButton                = Alternativen Namen hinzuf\u00FCgen
@@ -1339,6 +1339,7 @@ person.show.header                                = Personeneintrag
 person.show.modal.addRole.placeholder             = Autorname oder Titel
 person.show.modal.addSupervisedThesis.header      = betreute Abschlussarbeit hinzuf\u00FCgen
 person.show.modal.addSupervisedThesis.placeholder = Autorname oder Titel
+person.show.modal.addSupervisedThesis.role        = Rolle von {0}
 person.show.modal.addSupervisedThesis.text        = Publikation suchen
 person.show.modal.addThesis.placeholder           = Autorname oder Titel
 person.show.modalAddNameHeader                    = Alternative Name zur Person hinzuf\u00FCgen
@@ -1372,6 +1373,7 @@ person.show.saveButton                            = Aktualisieren
 person.show.supervisor                            = Doktorvater
 person.show.thatsMeButton                         = Das bin ich
 person.show.thatsMeLabel                          = Benutzer
+person.show.thatsNotMeButton                      = Das bin ich nicht
 person.show.thesis                                = Abschlussarbeiten
 
 personalize = Zeige personalisierte Eintr\u00E4ge 
